update issue
1. img couldn't show up
2. when the browser size was too small, latex made horizontal scroll

--- a/src/styles/blog-templates.css
+++ b/src/styles/blog-templates.css
@@ -39,3 +39,10 @@ table td {
   text-align: center;
 }
 /*table style END*/
+
+/* KaTeX 수식 크기 자동 조정 */
+.katex {
+  overflow-x: auto;
+  overflow-y: hidden;
+  height: auto;
+}
